# programming_puzzles

./: .gitattributes  README.md
python/: pyproject.toml
python/aoc/y2025/d01/: diagnostic.txt  p1.py  p2.py
python/aoc/y2025/d02/: diagnostic.txt  p1.py  p2.py
python/docs/superpowers/plans/: 2026-04-06-python-aoc-project-init.md
python/docs/superpowers/specs/: 2026-04-06-python-aoc-project-design.md
python/ec/y2025/q01/p01/: __init__.py  input.txt
python/ec/y2025/q01/p02/: __init__.py
python/ec/y2025/q01/p03/: __init__.py  example.txt  input.txt
python/ec/y2025/q02/p01/: __init__.py  example.txt  input.txt
python/ec/y2025/q02/p02/: __init__.py  example.txt
python/ec/y2025/q02/p03/: __init__.py
python/ec/y2025/q03/p01/: __init__.py
python/ec/y2025/q03/p02/: __init__.py
python/ec/y2025/q03/p03/: __init__.py  example.txt  input.txt
python/ec/y2025/q04/p01/: __init__.py
python/ec/y2025/q04/p02/: __init__.py  example.txt  example2.txt  input.txt
python/ec/y2025/q04/p03/: __init__.py  input.txt
python/ec/y2025/q05/p01/: __init__.py  input.txt
python/ec/y2025/q05/p02/: __init__.py  input.txt
python/ec/y2025/q05/p03/: __init__.py  example.txt
python/ec/y2025/q06/p01/: __init__.py  input.txt
python/ec/y2025/q06/p02/: __init__.py
python/ec/y2025/q06/p03/: __init__.py  input.txt
python/ec/y2025/q07/p01/: __init__.py  example.txt
python/ec/y2025/q07/p02/: __init__.py  example.txt  input.txt
python/hod/y5784/: noahs-customers.jsonl  noahs-products.jsonl  q1.ipynb  q2.ipynb  q3.ipynb  q4.ipynb  q5.ipynb  q6.ipynb  q7.ipynb  q8.ipynb
(+139 files in other folders)
